fixed card bg & color for light & dark mode

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -382,7 +382,8 @@ $btn-border-radius: $border-radius !default;
 //cards
 $card-title-spacer-y: 1.25rem !default;
 
-$card-bg: $white !default;
+$card-bg: $light !default;
+$card-bg-hover: $white !default;
 $card-color: $dark !default;
 
 $card-border-width: $border-width !default;
