--- a/src/scss/layout/_dark.scss
+++ b/src/scss/layout/_dark.scss
@@ -19,7 +19,9 @@ body:not(.theme-dark) .hide-theme-light {
     --#{$prefix}body-bg-rgb: #{to-rgb($dark-mode-darken)};
 
     --#{$prefix}card-bg: #{$dark-mode-darken};
+    --#{$prefix}card-bg-hover: #{$dark-mode-darken};
     --#{$prefix}card-bg-rgb: #{to-rgb($dark-mode-darken)};
+    --#{$prefix}card-color: #{$dark-mode-text};
 
     --#{$prefix}border-color: #{$dark-mode-border-color};
     --#{$prefix}border-color-light: #{$dark-mode-border-color-light};
