--- a/src/scss/ui/_cards.scss
+++ b/src/scss/ui/_cards.scss
@@ -1,7 +1,7 @@
 .card {
   --#{$prefix}card-border-radius: var(--#{$prefix}border-radius);
-  --#{$prefix}card-bg: var(--#{$prefix}body-bg);
-  --#{$prefix}card-color: var(--#{$prefix}body-color);
+  --#{$prefix}card-bg: var(--#{$prefix}card-bg);
+  --#{$prefix}card-color: var(--#{$prefix}card-color);
 
   box-shadow: $card-shadow;
   border: $card-border-width solid $card-border-color;
